# homework-cg

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
resource/: paquito.txt
src/: draw.c  draw.h  main.c  main.h  music.c  music.h
windows-dist/: README.md  resource.rc
